# WeaslesandCo

./: Dockerfile  README.md  ai_india_plan.json  api.py  app.py  graph.py  last_successful_run.json  llm.py  main.py  pyproject.toml  state.py
agents/: __init__.py  critic.py  gtm.py  ops.py  orchestrator.py  outreach.py  pricing.py  researcher.py  speaker.py  sponsor.py  venue.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/how-it-works/: page.tsx
frontend/app/pipeline/: page.tsx
frontend/app/results/: layout.tsx  page.tsx
frontend/app/results/gtm/: page.tsx
frontend/app/results/ops/: page.tsx
frontend/app/results/outreach/: page.tsx
frontend/app/results/pricing/: page.tsx
frontend/app/results/speakers/: page.tsx
frontend/app/results/sponsors/: page.tsx
frontend/app/results/venues/: page.tsx
frontend/app/setup/: page.tsx
frontend/lib/: api.ts  store.ts
tools/: __init__.py  rag.py  search.py
