[project]
name = "conference-ai"
version = "0.1.0"
description = "Multi-agent conference planner"
authors = [
    {name = "Vadi",email = "ishaanvadi@gmail.com"}
]
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "langchain-groq (>=1.1.2) ; python_version >= \"3.11\" and python_full_version < \"4.0.0\"",
    "langchain-community (>=0.4.1,<0.5.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "langgraph (>=1.1.6,<2.0.0)",
    "ddgs (>=9.13.1,<10.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "chromadb (>=1.5.7,<2.0.0)",
    "sentence-transformers (>=5.4.1,<6.0.0)",
    "protobuf (<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
